--- a/01_Elementary_Operations.ipynb
+++ b/01_Elementary_Operations.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/01_Elementary_Operations.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/shaantanu2001/fmml2021/blob/main/01_Elementary_Operations.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -59,24 +59,54 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dm1hT_B9jXGu"
+        "id": "dm1hT_B9jXGu",
+        "outputId": "100213da-0870-4754-95db-33d3c2a6ba52",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "3 + 2         # addition"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sUhkQPuhXbYj"
+        "id": "sUhkQPuhXbYj",
+        "outputId": "c2bd9548-937d-4b87-e515-c099fb73e6df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "3 - 2         # subtraction"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -103,13 +133,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2LQZZcRPX5Bt"
+        "id": "2LQZZcRPX5Bt",
+        "outputId": "2bed5e37-f425-4415-9268-e54c82c71d69",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "type (7 / 2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -125,24 +170,54 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2L_ku8CLYKDC"
+        "id": "2L_ku8CLYKDC",
+        "outputId": "9f21cea2-d201-4680-d03e-268431d96f27",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "type ( 7 // 2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dH2NmrgNYM97"
+        "id": "dH2NmrgNYM97",
+        "outputId": "8cf7740c-76e1-49bc-f79e-a9fc9353470b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "7 % 2         # modulus operator - remainder is fetched after division"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -176,52 +251,128 @@
         "first_name = 'charlie'\n",
         "second_name = \"chaplin\""
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oYu_ynPOeS2_"
+        "id": "oYu_ynPOeS2_",
+        "outputId": "7e2089c8-6074-4d77-d1ad-b7ecd4aee3b3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "first_name + second_name"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'charliechaplin'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oIY8q8wgehFC"
+        "id": "oIY8q8wgehFC",
+        "outputId": "474ece04-72f3-4ba6-d976-c81eeb11a812",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "first_name + ' ' + second_name"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'charlie chaplin'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6Vuv8iMbevRJ"
+        "id": "6Vuv8iMbevRJ",
+        "outputId": "afc8e91d-81fe-45f4-f10d-470af63c9287",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "first_name * 2"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'charliecharlie'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QPblckrXe2ui"
+        "id": "QPblckrXe2ui",
+        "outputId": "01319cdf-45fa-4193-f46a-3683a60e7df6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "(first_name * 2) + ' ' + (second_name * 3)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'charliecharlie chaplinchaplinchaplin'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -243,31 +394,59 @@
         "brick_breadth = 4\n",
         "brick_height = 2"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pKZ7uDHCZ3At"
+        "id": "pKZ7uDHCZ3At",
+        "outputId": "04aaefd8-b4be-4e38-f174-74aef728f379",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "brick_volume = brick_length * brick_breadth * brick_height\n",
         "print (brick_volume)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "40\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "S2zZsoBb2z45"
+        "id": "S2zZsoBb2z45",
+        "outputId": "827f5aa1-ae90-4ba1-c651-dd32a8475af2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# 2. What will the expression -3 ** 2 evaluate to ?\n"
+        "# 2. What will the expression -3 ** 2 evaluate to ?\n",
+        "-3**2"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-9"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -281,13 +460,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fZ4Tpi0B27lf"
+        "id": "fZ4Tpi0B27lf",
+        "outputId": "5ec0a9a8-3fee-4f66-c8f6-a53e555e49fb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "cost_of_petrol = 102\n",
+        "mileage_of_the_vehicle = 38\n",
+        "money_in_hand = 50\n",
+        "\n",
+        "distance = (mileage_of_the_vehicle/cost_of_petrol)*money_in_hand\n",
+        "print(\"The distance that your vehicle can cover in\",money_in_hand,\"Rs. is\", round(distance, 2), \"km\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The distance that your vehicle can cover in 50 Rs. is 18.63 km\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
