--- a/02_Conditional_and_Logical_Operators.ipynb
+++ b/02_Conditional_and_Logical_Operators.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/02_Conditional_and_Logical_Operators.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/shaantanu2001/fmml2021/blob/main/02_Conditional_and_Logical_Operators.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -69,46 +69,106 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dm1hT_B9jXGu"
+        "id": "dm1hT_B9jXGu",
+        "outputId": "1b1a1c09-b967-4011-ad32-95cefb23fd66",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "5 < 3"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BjHkFO4SbEhb"
+        "id": "BjHkFO4SbEhb",
+        "outputId": "06b45c42-6f8c-4b21-e112-8290595d7274",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "5 > 3"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2DtiCXDAbISf"
+        "id": "2DtiCXDAbISf",
+        "outputId": "ac1a66b9-ae44-4692-8d55-db4ba9164cb9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "5 == 3"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4Dc_T_mUbPb1"
+        "id": "4Dc_T_mUbPb1",
+        "outputId": "689c707d-1f43-45ca-9efb-06ce6ee16668",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "5 != 3"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -119,30 +179,60 @@
         "akbar_age = 43\n",
         "antony_age = 53"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KVCzBU1xbbm0"
+        "id": "KVCzBU1xbbm0",
+        "outputId": "4f4c5072-272c-4b75-eaec-194cc3470dfd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "akbar_age < antony_age"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gs2hOefnbnsF"
+        "id": "gs2hOefnbnsF",
+        "outputId": "d9402904-ba54-4e72-bf32-03f2d59d5ea1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "(akbar_age > antony_age)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -161,90 +251,210 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wy1D4AdmcVyA"
+        "id": "wy1D4AdmcVyA",
+        "outputId": "c42b12bd-cbf5-4bf8-bbc9-d858a63b7eff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "(akbar_age < 40)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EeBrBGomcYEO"
+        "id": "EeBrBGomcYEO",
+        "outputId": "e9001449-9060-434d-bb33-b5bfb9860c92",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "(antony_age > 40)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "O0kjtUXe4K1e"
+        "id": "O0kjtUXe4K1e",
+        "outputId": "00a1308e-8409-4346-dbe6-2e5b395f779f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "(akbar_age < 40) or (antony_age > 40)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fB52_Yeo0Bv-"
+        "id": "fB52_Yeo0Bv-",
+        "outputId": "03848ed8-4a2f-47ac-9cf2-b88dcda50c19",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "False or True"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mpBhFHZhcprc"
+        "id": "mpBhFHZhcprc",
+        "outputId": "2404d8ec-0383-48c1-bcc0-b852e1d4089e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "(akbar_age < 40) and (antony_age > 40)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mdkmh4K3ct3-"
+        "id": "mdkmh4K3ct3-",
+        "outputId": "70c2291d-dd6f-4ea1-c9f5-11365fd81d70",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "False and True"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rJUB382Ecz4M"
+        "id": "rJUB382Ecz4M",
+        "outputId": "a56817bd-363d-4921-9b7b-74b06667783e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "not (akbar_age < 40)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TknwOBHtdAPg"
+        "id": "TknwOBHtdAPg",
+        "outputId": "683b89ab-f496-4b74-c760-e6cc34620b43",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "not False"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
     },
     {
       "cell_type": "markdown",
