--- a/04_Conditional_Statement.ipynb
+++ b/04_Conditional_Statement.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/04_Conditional_Statement.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/shaantanu2001/fmml2021/blob/main/04_Conditional_Statement.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -60,43 +60,96 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eDT9R8AOqnsz"
+        "id": "eDT9R8AOqnsz",
+        "outputId": "88783e90-894e-4628-bc19-0e394060a024",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "a = input(\"Enter an integer a: \")\n",
         "type(a)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter an integer a: 27\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gbOsmJaIqiIP"
+        "id": "gbOsmJaIqiIP",
+        "outputId": "bfc80a49-9bab-474b-d0d5-c62e77147d87",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "a = int(a)\n",
         "type(a)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8D8fTIoYqdGE"
+        "id": "8D8fTIoYqdGE",
+        "outputId": "33c9f26c-bd3c-4609-f10a-319c573e4f2e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "b = input(\"Enter an integer b: \")\n",
         "b = int(b)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter an integer b: 32\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cehfXMvowN0S"
+        "id": "cehfXMvowN0S",
+        "outputId": "9d6b7262-2a9d-4203-a2cd-d5c8dd08175d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "if (a > b):\n",
@@ -108,8 +161,17 @@
         "else:\n",
         "  print (\"a is neither greater than b,  nor less than b\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a is less than b\n",
+            "which is clear\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -123,7 +185,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZF-tcVscuADN"
+        "id": "ZF-tcVscuADN",
+        "outputId": "8de7fa35-e2d0-4ed4-8c26-5c0dc71d8d73",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "a = input(\"Enter an integer a: \")\n",
@@ -131,19 +197,40 @@
         "b = input(\"Enter an integer b: \")\n",
         "b = int(b)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter an integer a: 21\n",
+            "Enter an integer b: 33\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "N2E5veph8_9V"
+        "id": "N2E5veph8_9V",
+        "outputId": "5a6d64ef-8e8e-4d3f-f7dd-cb32d06200ca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "if (a < b): print (\"a is lesser than b\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a is lesser than b\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -157,7 +244,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SwO5vZ8LxGMA"
+        "id": "SwO5vZ8LxGMA",
+        "outputId": "7a7bb9d7-0088-4a52-fa0f-03a7d9c9a814",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "a = input(\"Enter an integer a: \")\n",
@@ -165,19 +256,40 @@
         "b = input(\"Enter an integer b: \")\n",
         "b = int(b)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter an integer a: 22\n",
+            "Enter an integer b: 3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-SLed6y6xJoq"
+        "id": "-SLed6y6xJoq",
+        "outputId": "bf58718c-91f6-4bd8-aad7-e5aba1ce11e4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "print (\"a is less than b\") if (a < b) else print (\"a - {} is not less than b - {}.\".format(a, b))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a - 22 is not less than b - 3.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -191,25 +303,50 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JHGOgFs-vWbq"
+        "id": "JHGOgFs-vWbq",
+        "outputId": "79d84529-bb36-47af-e60a-986231545b3c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "a = input(\"Enter first string: \")\n",
         "b = input (\"Enter second string: \")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter first string: abc\n",
+            "Enter second string: abcabc\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qgqqBPjAvLQx"
+        "id": "qgqqBPjAvLQx",
+        "outputId": "4bdf3732-3593-4891-c104-5157e29162ca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "print (\"first string comes earlier\") if (a<b) else print (\"second string comes earlier\") if (b<a) else print (\"both strings are same\")  "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "first string comes earlier\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -223,13 +360,48 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b_QjChOW2VJY"
+        "id": "b_QjChOW2VJY",
+        "outputId": "9ce37f35-b16e-4fb5-8806-066cff988179",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Your program should come here"
+        "# Your program should come here\n",
+        "vowels = ['a','e','i','o','u']\n",
+        "def exercise():\n",
+        "  s = input(\"Enter a character to check whether its a vowel or a consonant : \")\n",
+        "  if len(s) > 1:\n",
+        "    print(\"Invalid Input\\nPlease provide a single character to check\")\n",
+        "    exercise()\n",
+        "  elif s.strip().isdigit():\n",
+        "    print(\"Invalid Input\\nPlease enter a character, not a digit\")  \n",
+        "    exercise()\n",
+        "  else:\n",
+        "    if s in vowels:\n",
+        "      print(\"The character you entered is a vowel\")\n",
+        "    else:\n",
+        "      print(\"The character you entered ia a consonant\")\n",
+        "\n",
+        "exercise()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a character to check whether its a vowel or a consonant : 2\n",
+            "Invalid Input\n",
+            "Please enter a character, not a digit\n",
+            "Enter a character to check whether its a vowel or a consonant : ab\n",
+            "Invalid Input\n",
+            "Please provide a single character to check\n",
+            "Enter a character to check whether its a vowel or a consonant : c\n",
+            "The character you entered ia a consonant\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
