--- a/05_Flow_control_statement_For_loop.ipynb
+++ b/05_Flow_control_statement_For_loop.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/05_Flow_control_statement_For_loop.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/shaantanu2001/fmml2021/blob/main/05_Flow_control_statement_For_loop.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -39,15 +39,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lHexb1UAseK6"
+        "id": "lHexb1UAseK6",
+        "outputId": "589bee55-03da-41b8-a6cd-ee2ddbc8e5c6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# range\n",
         "for i in range(9, 19, 3):\n",
         "  print (i, end=\" \")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9 12 15 18 "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -61,7 +73,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8YRJCPP2vVPe"
+        "id": "8YRJCPP2vVPe",
+        "outputId": "663c9e10-fc98-4b1c-81af-33a0b323f953",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# list\n",
@@ -69,8 +85,16 @@
         "for each_item in my_list:\n",
         "  print (each_item, end=\" \")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 2 3 4 "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -80,19 +104,31 @@
       "source": [
         "my_list = ['a', 'e', 'i', 'o', 'u']\n"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lWRcH-oE0nr6"
+        "id": "lWRcH-oE0nr6",
+        "outputId": "d6bd5db9-345a-4cc9-994d-389d342e5092",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "test_char = input(\"Enter Character: \")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter Character: a\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -106,19 +142,31 @@
         "    test_result = 'vowel'\n",
         "    break"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FXsvQh-C1C-m"
+        "id": "FXsvQh-C1C-m",
+        "outputId": "965908a7-c397-474a-8375-ec186c30210b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "print (test_result)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "vowel\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -130,19 +178,34 @@
         "# create a list of all odd numbers from 1 to 20\n",
         "my_list = [number for number in range(1,20,2)]"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IbKt_IhW6Z4z"
+        "id": "IbKt_IhW6Z4z",
+        "outputId": "76dc2cf6-7a4b-4c5e-ff8d-c92de29c4e2d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "my_list"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -154,19 +217,34 @@
         "# create a list of all odd numbers from 1 to 20\n",
         "my_list = [number for number in range(1,20) if (number % 2 == 1)]"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ahswgAU_qBVR"
+        "id": "ahswgAU_qBVR",
+        "outputId": "a345e80a-e14a-4fd3-ecd0-759af82d3341",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "my_list"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -180,13 +258,40 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2Kw7G5iCumaY"
+        "id": "2Kw7G5iCumaY",
+        "outputId": "4e02dcf1-f645-4622-e83a-344d4150662a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# for instance if input list is [1, 2, 3, 4],  you need to create a list [1, 4, 9, 16]"
+        "# for instance if input list is [1, 2, 3, 4],  you need to create a list [1, 4, 9, 16]\n",
+        "x = list(map(int,input(\"Enter the elements you want in the list with a space \").split()))\n",
+        "x.sort()\n",
+        "print(\"The final list of elements which have been taken as input is as follows :\\n\",x)\n",
+        "y = [i**2 for i in x]\n",
+        "print(\"The list of squared elements is as follows :\\n\",y)\n",
+        "\n",
+        " \n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the elements you want in the list with a space 1 2 3 4 5\n",
+            "The final list of elements which have been taken as input is as follows :\n",
+            " [1, 2, 3, 4, 5]\n",
+            "The list of squared elements is as follows :\n",
+            " [1, 4, 9, 16, 25]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
