--- a/06_While_Loop_Flow_Control.ipynb
+++ b/06_While_Loop_Flow_Control.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "06_While_Loop-Flow_Control.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNk563422oH/zxR2Ev1gU9h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/06_While_Loop_Flow_Control.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/shaantanu2001/fmml2021/blob/main/06_While_Loop_Flow_Control.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -116,7 +115,7 @@
       "source": [
         "my_str = '***********'"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -127,32 +126,81 @@
       "source": [
         "str_len = len(my_str)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rjpLoZPy5GF3"
+        "id": "rjpLoZPy5GF3",
+        "outputId": "5738daa9-0a6d-40a0-ff9d-6a1a616e2da1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "while (str_len > 0):\n",
         "   print (my_str[:str_len])\n",
         "   str_len = str_len - 1"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "***********\n",
+            "**********\n",
+            "*********\n",
+            "********\n",
+            "*******\n",
+            "******\n",
+            "*****\n",
+            "****\n",
+            "***\n",
+            "**\n",
+            "*\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "prvBHO7u7p-R"
+        "id": "prvBHO7u7p-R",
+        "outputId": "8d69089c-e16b-42a5-fe33-7dee03592688",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Exercise to print the pattern in increasing order"
+        "# Exercise to print the pattern in increasing order\n",
+        "my_str = '***********'\n",
+        "str_len = len(my_str)\n",
+        "while (str_len > 0):\n",
+        "  print (my_str[str_len:])\n",
+        "  str_len = str_len - 1"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "*\n",
+            "**\n",
+            "***\n",
+            "****\n",
+            "*****\n",
+            "******\n",
+            "*******\n",
+            "********\n",
+            "*********\n",
+            "**********\n"
+          ]
+        }
+      ]
     }
   ]
 }
