--- a/07_Defining_Functions.ipynb
+++ b/07_Defining_Functions.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/07_Defining_Functions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/shaantanu2001/fmml2021/blob/main/07_Defining_Functions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -56,13 +56,61 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "r_KUNOW3rCc6"
+        "id": "r_KUNOW3rCc6",
+        "outputId": "45b47cee-00d9-4fec-f270-d8721493013c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Write a function to check whether a given number belongs to fibonacci series or not"
+        "# Write a function to check whether a given number belongs to fibonacci series or not\n",
+        "def fibonacci():\n",
+        "  a = 0\n",
+        "  b = 1\n",
+        "  n = int(input(\"Of how many numbers you want the fibonacci series: \"))\n",
+        "  l = []\n",
+        "  for _ in range(n):\n",
+        "    l.append(a)\n",
+        "    c = a + b\n",
+        "    a = b\n",
+        "    b = c\n",
+        "  print(l)\n",
+        "  x = int(input(\"\\nEnter the number you want to check in the fibonacci series: \"))\n",
+        "  if x in l:\n",
+        "    print(\"The number belongs to the fibonacci series..\")\n",
+        "  else:\n",
+        "    print(\"The number doesn't belong to the series..\")\n",
+        "    print(\"\\nDo you want to check for any other number..\")\n",
+        "    ans = input(\"To continue press y, and if u want to quit press n: \")\n",
+        "    ans = ans.lower()\n",
+        "    if (ans == 'y'):\n",
+        "      fibonacci()\n",
+        "    \n",
+        "\n",
+        "fibonacci()\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Of how many numbers you want the fibonacci series: 10\n",
+            "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34]\n",
+            "\n",
+            "Enter the number you want to check in the fibonacci series: 6\n",
+            "The number doesn't belong to the series..\n",
+            "\n",
+            "Do you want to check for any other number..\n",
+            "To continue press y, and if u want to quit press n: Y\n",
+            "Of how many numbers you want the fibonacci series: 10\n",
+            "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34]\n",
+            "\n",
+            "Enter the number you want to check in the fibonacci series: 21\n",
+            "The number belongs to the fibonacci series..\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
