--- a/08_File_Processing.ipynb
+++ b/08_File_Processing.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "08 File Processing.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOEK0fUwDfn7xm6b4V5d5DI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/08_File_Processing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/shaantanu2001/fmml2021/blob/main/08_File_Processing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -77,6 +76,58 @@
         "# Ignore all leading blank characters."
       ],
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Zv6q9haO0m0l",
+        "outputId": "82628ff9-8910-4f16-c5f9-f574e0a65c3d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!wget https://raw.githubusercontent.com/mysql/mysql-server/8.0/Docs/sp-imp-spec.txt"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2021-09-13 15:43:46--  https://raw.githubusercontent.com/mysql/mysql-server/8.0/Docs/sp-imp-spec.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 43014 (42K) [text/plain]\n",
+            "Saving to: ‘sp-imp-spec.txt’\n",
+            "\n",
+            "\rsp-imp-spec.txt       0%[                    ]       0  --.-KB/s               \rsp-imp-spec.txt     100%[===================>]  42.01K  --.-KB/s    in 0.006s  \n",
+            "\n",
+            "2021-09-13 15:43:46 (6.44 MB/s) - ‘sp-imp-spec.txt’ saved [43014/43014]\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HGohO3PhpvRJ"
+      },
+      "source": [
+        "infile_pointer = open(\"sp-imp-spec.txt\",\"r\")\n",
+        "outfile_pointer = open(\"abc.txt\", \"w\")\n",
+        "for each_line in infile_pointer:\n",
+        "  each_line = each_line.strip()\n",
+        "  if len(each_line)>0:\n",
+        "    if each_line[0] == \"-\":\n",
+        "      outfile_pointer.write(each_line)\n",
+        "infile_pointer.close()\n",
+        "outfile_pointer.close()"
+      ],
+      "execution_count": 24,
       "outputs": []
     },
     {
