--- a/08_File_Processing.ipynb
+++ b/08_File_Processing.ipynb
@@ -81,11 +81,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Zv6q9haO0m0l",
-        "outputId": "82628ff9-8910-4f16-c5f9-f574e0a65c3d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Zv6q9haO0m0l",
+        "outputId": "82628ff9-8910-4f16-c5f9-f574e0a65c3d"
       },
       "source": [
         "!wget https://raw.githubusercontent.com/mysql/mysql-server/8.0/Docs/sp-imp-spec.txt"
@@ -120,14 +120,13 @@
         "infile_pointer = open(\"sp-imp-spec.txt\",\"r\")\n",
         "outfile_pointer = open(\"abc.txt\", \"w\")\n",
         "for each_line in infile_pointer:\n",
-        "  each_line = each_line.strip()\n",
-        "  if len(each_line)>0:\n",
-        "    if each_line[0] == \"-\":\n",
-        "      outfile_pointer.write(each_line)\n",
+        "  each_line = each_line.lstrip()\n",
+        "  if (each_line.startswith(\"-\")):\n",
+        "    outfile_pointer.write(each_line)\n",
         "infile_pointer.close()\n",
         "outfile_pointer.close()"
       ],
-      "execution_count": 24,
+      "execution_count": 26,
       "outputs": []
     },
     {
