--- a/10_Problem_Solution.ipynb
+++ b/10_Problem_Solution.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "10_Problem_Solution.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPdRyp10maCvf/RsIULclP0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/10_Problem_Solution.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/shaantanu2001/fmml2021/blob/main/10_Problem_Solution.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -46,7 +45,7 @@
       "source": [
         "import numpy as np"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -58,7 +57,7 @@
         "A = np.array([[20, 122, 20], [35,180, 35],[50, 220, 65], [70, 300, 30]])\n",
         "x = np.array([[0.05], [0.002], [0.02]])"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -80,8 +79,37 @@
       "source": [
         "y = np.matmul(A,x) - 4.0"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KWGPoppLNEmw",
+        "outputId": "21faf04c-195f-4794-caea-c1fe4f3b547a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "y"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[-2.356],\n",
+              "       [-1.19 ],\n",
+              "       [ 0.24 ],\n",
+              "       [ 0.7  ]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -91,19 +119,37 @@
       "source": [
         "Z = np.hstack((A,y))"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Oryf-5goVTxG"
+        "id": "Oryf-5goVTxG",
+        "outputId": "994baad8-0f58-4b28-9b5f-eb986bee6571",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "Z"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 2.000e+01,  1.220e+02,  2.000e+01, -2.356e+00],\n",
+              "       [ 3.500e+01,  1.800e+02,  3.500e+01, -1.190e+00],\n",
+              "       [ 5.000e+01,  2.200e+02,  6.500e+01,  2.400e-01],\n",
+              "       [ 7.000e+01,  3.000e+02,  3.000e+01,  7.000e-01]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -116,19 +162,34 @@
         "  L = np.hstack((A,y))\n",
         "  return L"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6VqMLbRWVwL3"
+        "id": "6VqMLbRWVwL3",
+        "outputId": "1c7dff00-f6c2-4eee-e397-7ac4d77e7a29",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "print (RankArray(A,x))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 2.000e+01  1.220e+02  2.000e+01 -2.356e+00]\n",
+            " [ 3.500e+01  1.800e+02  3.500e+01 -1.190e+00]\n",
+            " [ 5.000e+01  2.200e+02  6.500e+01  2.400e-01]\n",
+            " [ 7.000e+01  3.000e+02  3.000e+01  7.000e-01]]\n"
+          ]
+        }
+      ]
     }
   ]
 }
