--- a/Module 2 Lab 4.ipynb
+++ b/Module 2 Lab 4.ipynb
@@ -851,6 +851,20 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "E5xc0Dp2mOes"
+      },
+      "source": [
+        "Answers\n",
+        "\n",
+        "1. PCA is unsupervised linear dimensionality reduction algorithm and t-SNE is unsupervised non-linear dimensionality reduction algorithm.\n",
+        "2. Non - linearity in t-SNE helps us capture the local structure of data, it is helpful in datasets where information might be lost preserving the global structure of data while reducing dimensions.\n",
+        "3. In PCA, it preserves the global structure of the data whereas the t-SNE preserves the local structure of the data.\n",
+        "4. t-SNE is more computationally expensive than PCA since t-SNE involves hyperparameters."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "N_-Sc5UgD2Sp"
       },
       "source": [
